--- a/src/components/TeamMember/index.css
+++ b/src/components/TeamMember/index.css
@@ -7,15 +7,20 @@
     justify-content: flex-start;
     align-items: center;
     margin: 20px;
+    margin-bottom: 0;
+    max-height: 60vh;
     @media screen and (min-width: 768px) {
         padding: 20px;
         width: 25%;
+        margin-top: 0;
+        height: 70vh;
     }
 }
 
 .member-card img {
     filter: drop-shadow(0 0 50px grey);
     width: 60%;
+    z-index: -1;
 }
 
 .member-card h2{
@@ -50,7 +55,7 @@
 }
 
 .hidden{
-    max-height: 15%;
+    max-height: 18%;
     overflow:hidden;
     text-overflow: ellipsis;
     margin-bottom: 0;
@@ -63,4 +68,6 @@
 .show{
     color: #4E596E;
     margin-bottom: 0;
+    max-height: 38%;
+    overflow-y: auto;
 }
